objects/SFDocumentor__Object_Limit__c.object
<CustomObject>
    <description>All the limits present on the object are present in this object</description>
    <fields>
        <fullName>SFDocumentor__EntityDefinitionId__c</fullName>
        <label>EntityDefinitionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Limit_Id__c</fullName>
        <externalId>true</externalId>
        <label>Limit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>SFDocumentor__Object_Collection__c</referenceTo>
        <relationshipLabel>Object Limits</relationshipLabel>
        <relationshipName>Object_Limits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__USAGE__c</fullName>
        <formula>SFDocumentor__Max__c  -  SFDocumentor__Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USAGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__USED__c</fullName>
        <formula>SFDocumentor__USAGE__c  /  SFDocumentor__Max__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% USED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__testNo__c</fullName>
        <label>testNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Object Limit</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>SFDocumentor__Object_Name__c</columns>
        <columns>NAME</columns>
        <columns>SFDocumentor__Max__c</columns>
        <columns>SFDocumentor__USAGE__c</columns>
        <columns>SFDocumentor__Remaining__c</columns>
        <columns>SFDocumentor__USED__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>